crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__env__review_nothing__json.snap
---
source: crates/engram-cli/tests/cli/snapshot/env.rs
expression: f.run(& all)
---
$ engramdb --no-maintenance --dir [PROJECT] --format json review
exit: 0
--- stdout ---
{
  "message": "No memories need review."
}
--- stderr ---
