crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__env__review_nothing__pretty.snap
---
source: crates/engram-cli/tests/cli/snapshot/env.rs
expression: f.run(& all)
---
$ engramdb --no-maintenance --dir [PROJECT] --format pretty review
exit: 0
--- stdout ---
No memories need review.
--- stderr ---
